--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
   <div id="circle"></div>
 
   <script src="script.js"></script>
+  <!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-messaging-compat.js"></script>
+<script src="firebase-init.js"></script>
+
 </body>
 </html>
