--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <option value="english">English</option>
       <option value="assamese">Assamese</option>
     </select>
+    <a href="https://koscricket.blogspot.com">link text</a>
     <input type="text" id="search" placeholder="🔍 Search stories..." />
   </header>
 
