--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <input type="text" id="search" placeholder="🔍 Search stories..." />
   </header>
 
+    <a href="https://koscricket.blogspot.com">link text</a>
   <main>
     <section id="storyList">
 
